# pi_camara_deputados

./: .gitignore  .pdm-python  README.md  deputados.xlsx  notebook.ipynb  pyproject.toml
extract_files/: deputados.xlsx
notebooks/: notebook.ipynb
